--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,12 @@
         "cloud",
         "sdk"
     ],
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../http-client-utilities"
+        }
+    ],
     "type": "library",
     "license": "MIT",
     "autoload": {
@@ -24,7 +30,7 @@
             "email": "joey.mckenzie27@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": "^8.4",
         "php-http/discovery": "^1.20",
@@ -32,7 +38,8 @@
         "psr/http-client": "^1.0",
         "psr/http-client-implementation": "^1.0",
         "psr/http-factory-implementation": "^1.0",
-        "psr/http-message": "^2.0"
+        "psr/http-message": "^2.0",
+        "hetznercloud/http-client-utilities": "*"
     },
     "require-dev": {
         "pestphp/pest": "^3.7",
@@ -43,7 +50,10 @@
         "phpstan/phpstan-deprecation-rules": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
         "phpstan/extension-installer": "^1.4",
-        "guzzlehttp/guzzle": "^7.9"
+        "guzzlehttp/guzzle": "^7.9",
+        "vlucas/phpdotenv": "^5.6",
+        "pestphp/pest-plugin-faker": "^3.0",
+        "mockery/mockery": "^1.6"
     },
     "scripts": {
         "prepare": "git config core.hookspath .githooks && lefthook install",
