--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,10 @@
 {
-    "name": "hetznercloud/client",
+    "name": "hetzner-cloud-php/client",
     "description": "A PHP client for the Hetzner Cloud API.",
     "keywords": [
         "hetzner",
         "cloud",
         "sdk"
-    ],
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../http-client-utilities"
-        }
     ],
     "type": "library",
     "license": "MIT",
@@ -30,7 +24,7 @@
             "email": "joey.mckenzie27@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^8.4",
         "php-http/discovery": "^1.20",
@@ -39,7 +33,7 @@
         "psr/http-client-implementation": "^1.0",
         "psr/http-factory-implementation": "^1.0",
         "psr/http-message": "^2.0",
-        "hetznercloud/http-client-utilities": "*"
+        "hetzner-cloud-php/http-client-utilities": "^0.1"
     },
     "require-dev": {
         "pestphp/pest": "^3.7",
