--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "guzzlehttp/guzzle": "^7.9",
         "vlucas/phpdotenv": "^5.6",
         "pestphp/pest-plugin-faker": "^3.0",
-        "mockery/mockery": "^1.6"
+        "mockery/mockery": "^1.6",
+        "pestphp/pest-plugin-watch": "3.x-dev"
     },
     "scripts": {
         "prepare": "git config core.hookspath .githooks && lefthook install",
