feat: add server metrics

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "psr/http-client-implementation": "^1.0",
         "psr/http-factory-implementation": "^1.0",
         "psr/http-message": "^2.0",
-        "hetzner-cloud-php/http-client-utilities": "^0.1"
+        "hetzner-cloud-php/http-client-utilities": "^0.1",
+        "nesbot/carbon": "^3.8"
     },
     "require-dev": {
         "pestphp/pest": "^3.7",
