feat: massive refactor, add proper typed responses

--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,10 @@
         "fix": [
             "@refactor",
             "@fmt"
+        ],
+        "prep": [
+            "@fix",
+            "@check"
         ]
     },
     "config": {
