--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "vlucas/phpdotenv": "^5.6",
         "pestphp/pest-plugin-faker": "^3.0",
         "mockery/mockery": "^1.6",
-        "pestphp/pest-plugin-watch": "3.x-dev"
+        "pestphp/pest-plugin-watch": "3.x-dev",
+        "peckphp/peck": "^0.1.1"
     },
     "scripts": {
         "prepare": "git config core.hookspath .githooks && lefthook install",
@@ -59,23 +60,25 @@
         "test:watch": "vendor/bin/pest --watch --parallel --mutate",
         "test:types": "vendor/bin/pest --type-coverage --min=100 --parallel",
         "test:mutate": "vendor/bin/pest --mutate --min=100 --parallel",
-        "test:integration": "php examples/testing.php",
+        "test:ci": "vendor/bin/pest --mutate --min=100 --parallel --ci",
         "test": [
             "@test:mutate",
             "@test:coverage"
         ],
         "fmt": "vendor/bin/pint",
-        "fmt:test": "./vendor/bin/pint --test",
+        "fmt:test": "vendor/bin/pint --test",
         "lint": "vendor/bin/phpstan analyze",
         "lint:watch": "find src phpstan.neon.dist | entr -s \"composer run lint\"",
-        "lint:clear": "./vendor/bin/phpstan clear-result-cache",
+        "lint:clear": "vendor/bin/phpstan clear-result-cache",
         "refactor": "vendor/bin/rector process",
         "refactor:test": "vendor/bin/rector process --dry-run",
+        "peck": "vendor/bin/peck",
         "check": [
             "@test",
             "@fmt:test",
             "@lint",
-            "@refactor:test"
+            "@refactor:test",
+            "@peck"
         ],
         "fix": [
             "@refactor",
@@ -84,6 +87,13 @@
         "prep": [
             "@fix",
             "@check"
+        ],
+        "ci": [
+            "@lint",
+            "@fmt:test",
+            "@refactor:test",
+            "@test:ci",
+            "@peck"
         ]
     },
     "config": {
