chore: add aspell to ci

--- a/.github/workflows/run-ci.yml
+++ b/.github/workflows/run-ci.yml
@@ -41,5 +41,9 @@ jobs:
       - name: List Installed Dependencies
         run: composer show -D
 
+      - name: Install Aspell
+        shell: bash
+        run: sudo apt-get update && sudo apt-get install -y aspell aspell-en
+
       - name: Run CI
         run: composer run ci
