--- a/.github/workflows/run-ci.yml
+++ b/.github/workflows/run-ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest ]
         php: [ 8.4 ]
         stability: [ prefer-stable ]
 
