--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "scripts": {
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
-        "docs:preview": "vitepress preview docs"
+        "docs:preview": "vitepress preview docs",
+        "deploy": "netlify deploy --dir=./docs/.vitepress/dist --prod"
     },
     "devDependencies": {
+        "netlify-cli": "^18.0.2",
         "vitepress": "^1.6.3"
     }
 }
