--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,9 +23,4 @@ jobs:
           NODE_ENV: production
 
       - name: Deploy to Netlify
-        run: |
-          netlify deploy \
-            --dir=./docs/.vitepress/dist \
-            --prod --message="Production deploy from ${{ github.sha }}" \
-            --site ${{ secrets.NETLIFY_SITE_ID }}
-            --auth ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        run: netlify deploy --dir=./docs/.vitepress/dist --prod --message="Production deploy from ${{ github.sha }}" --site ${{ secrets.NETLIFY_SITE_ID }} --auth ${{ secrets.NETLIFY_AUTH_TOKEN }}
