--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: latest
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --save-dev
 
       - name: Build
         run: npm run docs:build
