--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,4 +23,9 @@ jobs:
           NODE_ENV: production
 
       - name: Deploy to Netlify
-        run: netlify deploy --dir=./docs/.vitepress/dist --prod --message="Production deploy from ${{ github.sha }}" --site ${{ secrets.NETLIFY_SITE_ID }} --auth ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        run: |
+          npx netlify deploy --prod  \
+            --dir=./docs/.vitepress/dist \
+            --message="Production deploy from ${{ github.sha }}" \
+            --site ${{ secrets.NETLIFY_SITE_ID }} \
+            --auth ${{ secrets.NETLIFY_AUTH_TOKEN }}
