--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,7 +1,10 @@
 name: Deploy docs to Netlify
+
 on:
   push:
-    branches: [ main ]
+    paths:
+      - '**.md'
+      - 'docs/config.mts'
 
 jobs:
   deploy:
