--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
+    "type": "module",
     "scripts": {
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:preview": "vitepress preview docs",
-        "deploy": "netlify deploy --dir=./docs/.vitepress/dist --prod"
+        "deploy": "netlify deploy --dir=./docs/.vitepress/dist --prod",
+        "fmt": "prettier --write ./docs"
     },
     "devDependencies": {
         "netlify-cli": "^18.0.2",
+        "prettier": "^3.4.2",
         "vitepress": "^1.6.3"
     }
 }
