feat: adding testing utils and fakes

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -3,3 +3,7 @@ parameters:
     paths:
         - src
         - examples
+    excludePaths:
+            analyse:
+                - src/Testing
+    reportUnmatchedIgnoredErrors: true
