chore: test cleanup for mutations

--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         "test:watch": "vendor/bin/pest --watch --parallel --mutate",
         "test:types": "vendor/bin/pest --type-coverage --min=100 --parallel",
         "test:mutate": "vendor/bin/pest --mutate --min=100 --parallel",
+        "test:mutate:cache-clear": "vendor/bin/pest --mutate --min=100 --parallel --clear-cache",
         "test:ci": "vendor/bin/pest --mutate --min=100 --parallel --ci",
         "test": [
             "@test:mutate",
