--- a/composer.json
+++ b/composer.json
@@ -24,22 +24,16 @@
             "email": "joey.mckenzie27@gmail.com"
         }
     ],
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../http-client-utilities"
-        }
-    ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
-        "php": "^8.4",
+        "php": ">=8.3",
         "php-http/discovery": "^1.20",
         "php-http/multipart-stream-builder": "^1.4",
         "psr/http-client": "^1.0",
         "psr/http-client-implementation": "^1.0",
         "psr/http-factory-implementation": "^1.0",
         "psr/http-message": "^2.0",
-        "hetzner-cloud-php/http-client-utilities": "*",
+        "hetzner-cloud-php/http-client-utilities": "^0.1.11",
         "nesbot/carbon": "^3.8"
     },
     "require-dev": {
@@ -55,8 +49,9 @@
         "vlucas/phpdotenv": "^5.6",
         "pestphp/pest-plugin-faker": "^3.0",
         "mockery/mockery": "^1.6",
-        "pestphp/pest-plugin-watch": "3.x-dev",
-        "peckphp/peck": "^0.1.1"
+        "pestphp/pest-plugin-watch": "^3.0",
+        "peckphp/peck": "^0.1",
+        "pestphp/pest-plugin-type-coverage": "^3.3"
     },
     "scripts": {
         "prepare": "git config core.hookspath .githooks && lefthook install",
@@ -70,7 +65,7 @@
         "test:ci": "vendor/bin/pest --mutate --min=100 --parallel --ci",
         "test": [
             "@test:mutate",
-            "@test:coverage"
+            "@test:types"
         ],
         "fmt": "vendor/bin/pint",
         "fmt:test": "vendor/bin/pint --test",
