--- a/.github/workflows/run-ci.yml
+++ b/.github/workflows/run-ci.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.4 ]
+        php: [ 8.3, 8.4 ]
         stability: [ prefer-stable ]
 
     name: php ${{ matrix.php }} - ${{ matrix.stability }} - ${{ matrix.os }}
