--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "fmt": "prettier --write ./docs"
     },
     "devDependencies": {
+        "netlify-cli": "^20.0.0",
         "prettier": "^3.5.3",
         "vitepress": "^1.6.3"
     }
